legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr68577.c-4.8.2-2.out.txt
pr68577.c: In function ‘slp_test’:
pr68577.c:18:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i < 512; i += 4)
   ^
pr68577.c:18:3: note: use option -std=c99 or -std=gnu99 to compile your code
